--- a/IndWork/IndWork/Telas/GerenciarContratantes.resx
+++ b/IndWork/IndWork/Telas/GerenciarContratantes.resx
@@ -117,4 +117,21 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="btnPesquisar.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAACAAAAArCAYAAAAZvYo3AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAL
+        DAAACwwBP0AiyAAAAkdJREFUWEftljloFVEUhj/3BUHRwsZCtFAUgtgIaqNiIVaSwkK0srawcSkkiQuo
+        2NrY2YrYaqVokS4gGi1CxMalc8MQ9/CHc+B4wHlzb55iMR8Mb97Z7j/nzr13oKOjo6M388P9UmAzsBPY
+        AawH5oU4v+8LKuYFDwKPgR/Ar3R9A+4BWy12QahRjRdZB7xJA34EXgGvgS/J99Dy5tQNH3xvKn4ZWJum
+        ZCGwBbgb4r4Cy+ciQknbQ8EnwLLgy7Fu2wRMBRESp6sIqVaSD37f7OpKHjziQhSnKVLuU/PFjrXilhXQ
+        3IuSp9Bgq8MDHOgh/DcUuCIkD1So9/grVuNl8vfkmCW+sP+t1QckIj7ImpI6ty3panYU4INNWq3B5G/k
+        mSUdyo4K7lit4exoQq1X0r7sqOCm1bqWHU2MWdKR7KhA27NqncmOJm5YktTX4u+Ab+F7kv+PKHG/JX0y
+        W+kyFMrZGFaBVkSrVeB792dLPJwDWuDnyAOrMZr8rThpyTp6dai0PV69W2q5P72+F4q66NvuWyugfd1t
+        TYVcpHZPH/ys2Vq1P6KBloRCP4HdwR8LxvtTIV6/J8xecpbM4ieb2v8uCJkAjgMbgJXAKmAbcB74EOLG
+        w/2Q1awS4S2/Hgo2XdPAUcu5GOwXzFYsQvjc6mk1p89tiarN34H3wCNbMT4d+nAVUYTuRZUIn5L4fzGw
+        KNjc7nHu0xS4iEtmqxJRg4s416/pqMFFjAQRp1PMX8dF6FiWAP/Y+ae4iF2Fu2tfyS9yR0fH/8EMeEeV
+        AQoan7AAAAAASUVORK5CYII=
+</value>
+  </data>
 </root>
